--- a/CrimeDataBackend/CrimeData.Api/appsettings.json
+++ b/CrimeDataBackend/CrimeData.Api/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "CrimeDataConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CrimeData;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
   "AllowedHosts": "*",
   "Urls": "https://localhost:5001"
 
