--- a/CrimeDataBackend/CrimeData.Scheduler/appsettings.json
+++ b/CrimeDataBackend/CrimeData.Scheduler/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "CrimeDataConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CrimeData;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
