--- a/CrimeDataBackend/CrimeData.Data/CrimeData.Data.csproj
+++ b/CrimeDataBackend/CrimeData.Data/CrimeData.Data.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
