--- a/CrimeDataBackend/CrimeData.Scheduler/CrimeData.Scheduler.csproj
+++ b/CrimeDataBackend/CrimeData.Scheduler/CrimeData.Scheduler.csproj
@@ -8,6 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CrimeData.Data\CrimeData.Data.csproj" />
   </ItemGroup>
 </Project>
