impelement worker for fetching data every hour, and saving them in database add filter frondent component and api call for city

--- a/CrimeDataBackend/CrimeData.Scheduler/CrimeData.Scheduler.csproj
+++ b/CrimeDataBackend/CrimeData.Scheduler/CrimeData.Scheduler.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Worker">
+﻿<Project Sdk="Microsoft.NET.Sdk.Worker">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -10,9 +10,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CrimeData.Data\CrimeData.Data.csproj" />
+    <ProjectReference Include="..\CrimeData.Services\CrimeData.Services.csproj" />
   </ItemGroup>
 </Project>
