--- a/CrimeDataBackend/CrimeData.Services/CrimeData.Services.csproj
+++ b/CrimeDataBackend/CrimeData.Services/CrimeData.Services.csproj
@@ -7,7 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CrimeData.Data\CrimeData.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\Models\Request\" />
+    <Folder Include="Services\NewFolder\" />
   </ItemGroup>
 
 </Project>
